--- a/personal-issues/2160.md
+++ b/personal-issues/2160.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2025-12-19
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -18,14 +18,44 @@ number:	2160
 
 - [x] ~5 minutes: Take care of various software updates
 
+### Updates tracking and planning
+
+- [x] ~8 minutes: Add summaries for week so far (4 days) https://github.com/vipulnaik/daily-updates/commit/1a22d830b22849be9e9f6d785d862ca97695114c
+
+### Health research, appointments, recording
+
+#### Periodic tasks
+
+- [x] ~35 minutes: Execute and improve hearing checklist https://github.com/vipulnaik/diet-exercise-health/commit/a838b6f9dcad2400866837d362eba51abd6d2e3e
+- [x] ~10 minutes: Partially execute vision checklist https://github.com/vipulnaik/diet-exercise-health/commit/dd485e88cb92ee0d0eb6e230784254fadb74d299 https://github.com/vipulnaik/diet-exercise-health/commit/560e4dc537fe22a6bbd285df5f8083d7ad0ea544
+
+### Administrative / travel / bureaucracy
+
+- [x] ~20 minutes: Do periodic review of Berkeley street list; make a few updates to the list in the process; later, review the list again plus related documents
+
+### Periodic recall tasks
+
+- [x] ~15 minutes: Execute emergency contact fire drill
+- [x] ~33 minutes: Partially execute account recovery fire drill
+
+### Trash, compostables, and recycling
+
+- [x] (no separate time tracked as I multiplexed with listening to stuff): Rinse out used hand soap refill bottles
+
 ## Other activities
+
+### Periodic conversations
+
+- [x] ~10 minutes: Weekly chat with mother
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
 - [x] ~5 minutes: Continue watching new content from the hematology playlist
+- [x] ~5 minutes: Continue watching new content from the oncology playlist
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~40 minutes so far: Continue re-listening to a video
+- [x] ~40 minutes: Continue re-listening to a video
+- [x] ~35 minutes: Start listening to a video
