--- a/personal-issues/2164.md
+++ b/personal-issues/2164.md
@@ -12,7 +12,7 @@ number:	2164
 
 ### Health research, appointments, recording
 
-#### Unplanned events
+#### Unplanned incidents
 
 - [x] ~9 minutes: Continue with reduced hearing updates https://github.com/vipulnaik/diet-exercise-health/commit/fb8c98c33bbdb40338be4566d3fedfe04c04e8ce https://github.com/vipulnaik/diet-exercise-health/commit/8cdb5205187f4f35b32050f9aad78bf3aa15e536 https://github.com/vipulnaik/diet-exercise-health/commit/bb805ecf87eceef4e1c187358082bd14285ff7a3
 
