--- a/personal-issues/2166.md
+++ b/personal-issues/2166.md
@@ -1,5 +1,5 @@
 title:	Vipul Thursday checklist | 2025-12-25
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,9 +8,51 @@ projects:
 milestone:	
 number:	2166
 --
+## Personal finances, income and taxes
+
+### Financial processes
+
+- [x] ~15 minutes: Create first pass of financial account closure process doc https://github.com/vipulnaik/personal-finances/commit/e066f98f3077883143aba0381a4ea7896a08089c
+
+## Personal chores
+
+### Cooking and food purchases
+
+- [x] (no separate time tracked as both prep and cleanup were multiplexed with listening to stuff): Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/4fd28c8d16882abeff91ea6bbc041f912437405b
+
+### Health research, appointments, recording
+
+#### Unplanned incidents
+
+- [x] ~1 hour 18 minutes: Continue investigation and documentation around reduced hearing in left ear https://github.com/vipulnaik/diet-exercise-health/commit/b4a1aa6ae650f91daa668cfb4e24adef5990ce84 https://github.com/vipulnaik/diet-exercise-health/commit/f0624c8332f77ecf2272e3fd0328744c0fcb222c https://github.com/vipulnaik/diet-exercise-health/commit/86302033db1a69d1332ee65debf6fd6a81fa12d8 https://github.com/vipulnaik/diet-exercise-health/commit/8b3eb7b1d82ed0127135d3de95deaaa1b3d9fde3
+- [x] ~30 minutes: Apply Earwax MD and followup steps (documentation deferred to tomorrow)
+
+#### Exercise routine
+
+- [x] ~10 minutes: Update threshold logic for a balance exercise https://github.com/vipulnaik/diet-exercise-health/commit/93d046118d62b016eaeda3531e90705bba10bb62
+
+### Updates tracking and planning
+
+- [x] ~6 minutes: Add summaries for week so far (3 days) https://github.com/vipulnaik/daily-updates/commit/ff082e36160385c23d149becf3a55e2371626f85
+
 ## Other activities
 
 ### One-off conversations
 
-- [x] ~3 minutes: Exchange a few messages
+- [x] ~10 minutes: Exchange a few messages
+- [x] ~5 minutes: Review a few documents and send a few messages
 
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~15 minutes: Continue watching new content from the hematology playlist
+- [x] ~5 minutes: Continue watching new content from the oncology playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~30 minutes: Finish re-listening to a video
+- [x] ~25 minutes: Start listening to a video
+- [x] ~20 minutes: Start listening to a video
+- [x] ~1 hour: Listen to a video
+- [x] ~30 minutes: Start listening to a video
