Add summaries for period of 2025-12-27 to 2025-12-28; add corresponding week summary; fetch latest personal issues

--- a/personal-issues/2168.md
+++ b/personal-issues/2168.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2025-12-27
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,11 +8,22 @@ projects:
 milestone:	
 number:	2168
 --
+## Personal finances, income and taxes
+
+### Financial settings
+
+- [x] ~15 minutes: Do and record a financial transaction, plus set up reminders for future transactions https://github.com/vipulnaik/personal-finances/commit/3e0982c2e245010987cb3e8aded022cbabd1f950
+
 ## Personal chores
 
 ### Updates tracking and planning
 
 - [x] ~30 minutes: Do quarterly update of standing plan https://github.com/vipulnaik/daily-updates/commit/af6a241b74c0867f15e3dba7b68c31f6ad902f4b https://github.com/vipulnaik/daily-updates/commit/a2c76500b627ff0e1277fc649bc17c0f40e20f99
+- [x] ~4 minutes: Add summaries for past two days (2 day summaries) https://github.com/vipulnaik/daily-updates/commit/9df49a4031482f01a361d0c310058310c85caac2
+
+### Stocks
+
+- [x] ~30 minutes: Get toiletries from Walgreens https://github.com/vipulnaik/diet-exercise-health/commit/052bb549eec0fa6204fe4e4745e900d068255062
 
 ### Health research, appointments, recording
 
@@ -20,11 +31,30 @@ number:	2168
 
 - [x] ~25 minutes: Make a bunch of TODO list updates https://github.com/vipulnaik/diet-exercise-health/commit/fc6f8b7b192c05d9f7d33c92c5726337b5a23436 https://github.com/vipulnaik/daily-updates/commit/be12c29ddcb84505daad156e4ce60f0473b4266d
 
+### Periodic cleaning tasks
+
+- [x] (no separate time tracked as I multiplexed with listening to stuff): Clean the restroom (toilet bowl, sink, floor)
+- [x] (no separate time tracked as I multiplexed with listening to stuff): Sweep the bedroom
+
 ## Other activities
 
+### LLM exploration
+
+- [x] ~30 minutes: Do some exploration and discussion
+
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~10 minutes: Continue watching new content from the oncology playlist
+- [x] ~10 minutes: Continue watching new content from the hematology playlist
 
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
 - [x] ~5 minutes: Finish listening to a video
-- [ ] ~25 minutes so far: Start listening to a video
+- [x] ~1 hour 15 minutes: Listen to a video
+- [x] ~45 minutes: Start listening to a video
+
+### Other video/audio consumption of an educational nature
+
+- [x] ~1 hour 5 minutes: Listen to a video
