--- a/personal-issues/2181.md
+++ b/personal-issues/2181.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2026-01-09
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,23 @@ projects:
 milestone:	
 number:	2181
 --
+## Personal projects
+
+### Devops stuff
+
+- [x] ~10 minutes: Make updates to crawler exclusions in robots.txt; make a script to copy updates over across several sites at once
+
+### Subject wikis
+
+#### Groupprops
+
+- [x] ~15 minutes: Continue making fixes and improvements to Groupprops
+
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/b664fa57ecf4b0dfde500bff398ec488a5c90f2e
 
 ### Health research, appointments, recording
 
@@ -16,10 +32,38 @@ number:	2181
 
 - [x] ~3 minutes: Record execution of preparatory steps for COVID vaccine https://github.com/vipulnaik/diet-exercise-health/commit/64f5665c2189aa0984f4e4e4f6fc11d6510ecb26
 
+### Updates tracking and planning
+
+- [x] ~5 minutes: Add summaries for week so far (4 weekdays) https://github.com/vipulnaik/daily-updates/commit/bc9fa6a7b3fa5ab5e388d1be4b48330ae17bdca3
+
+### Personal devops
+
+- [x] ~2 minutes: Take care of a software update
+
+### Contingency planning
+
+- [x] ~2 minutes: Make a quick update to a document
+
+### Slack self-chat logs
+
+- [x] ~2 minutes: Remove logging checklist items that are duplicative and less necessary with the new procedures
+
 ## Other activities
+
+### One-off conversations
+
+- [x] ~5 minutes: Write up some thoughts on LLMs and automation
+- [x] ~5 minutes: Exchange a few messages
+- [x] ~15 minutes: Send a detailed set of replies to a long question
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
 - [x] ~10 minutes: Continue watching new content from the neurology playlist
+- [x] ~10 minutes: Continue watching new content from the oncology playlist
+
+### Other video/audio consumption of an educational nature
+
+- [x] ~1 hour: Finish listening to a geopolitical history video
+- [x] ~1 hour 15 minutes: Start listening to a geopolitical history video
