Add summaries for period of 2026-01-15 to 2026-01-16; fetch latest personal issues

--- a/personal-issues/2188.md
+++ b/personal-issues/2188.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2026-01-16
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,11 +8,29 @@ projects:
 milestone:	
 number:	2188
 --
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~10 minutes: Finish adding balances for end of October 2025 https://github.com/vipulnaik/personal-finances/commit/5ac5a9fac2ac14785ff784d3998ed3db9425207f
+- [x] ~35 minutes: Add balances for end of November 2025 https://github.com/vipulnaik/personal-finances/commit/e0da3c2c5d1c5b28d15d9240cb5ff38e974fdeb4
+- [x] ~2 minutes: Download recent statements https://github.com/vipulnaik/personal-finances/commit/2aafb59577eba5a10f81a6b1efaf87c93b0ec2eb
+
 ## Personal chores
 
 ### Cooking and food purchases
 
 - [x] (no separate time tracked as both prep and cleanup were multiplexed with listening to stuff): Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/b662c9f2f0cd4a5060717f40ee7ab816aa5c8322
+
+### Updates tracking and planning
+
+- [x] ~4 minutes: Add summaries for week till Wednesday https://github.com/vipulnaik/daily-updates/commit/a7db98789f6eecf1731013233622d7fc208c6d81 (1 minute overhead plus 3 days at 1 minute each)
+
+### Health research, appointments, recording
+
+#### Exercise routine
+
+- [x] ~15 minutes: Record balance exercise updates https://github.com/vipulnaik/diet-exercise-health/commit/f667ec29177491674c72e233ca793b7ab5fd7a69 https://github.com/vipulnaik/diet-exercise-health/commit/133e9502a593e0488d5aca54954f28d1cd49af59
 
 ### Month change checklists
 
@@ -22,9 +40,21 @@ number:	2188
 
 - [x] ~10 minutes: Measure stocks and make Walgreens shopping list
 
+### Personal devops
+
+- [x] ~2 minutes: Record disk usage update
+
 ### Periodic cleaning tasks
 
 - [x] ~3 minutes: Do impromptu cleaning of dusty exposed upper shelf
+
+### Administrative / travel / bureaucracy
+
+- [x] ~3 minutes: Take care of a password update
+
+### Periodic tasks
+
+- [x] ~5 minutes: Do single-handed typing tests
 
 ## House chores
 
@@ -32,7 +62,27 @@ number:	2188
 
 ## Other activities
 
+### One-off conversations
+
+- [x] ~20 minutes: Share further thoughts in a thread
+
+### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
+
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~5 minutes: Continue watching new content from the neurology playlist
+- [x] ~5 minutes: Continue watching new content from the oncology playlist
+
+#### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
+
+- [x] ~45 minutes: Start listening to a video
+
 ### Other video/audio consumption of an educational nature
 
 - [x] ~35 minutes: Finish listening to a geopolitical history video
-- [ ] ~25 minutes so far: Continue listening to a biosecurity video
+- [x] ~1 hour 10 minutes: Finish listening to a biosecurity video
+
+### Language learning
+
+- [x] ~4 minutes: Do a TOPIK Korean vocabulary quiz (score 8/12)
+- [x] ~3 minutes: Do a Kannada vocabulary quiz (score 24/25)
