Add summaries for period of 2026-01-23 to 2026-01-25; add corresponding week summary; fetch latest personal issues

--- a/personal-issues/2196.md
+++ b/personal-issues/2196.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2026-01-24
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -14,19 +14,53 @@ number:	2196
 
 - [x] ~20 minutes: Write a comment reply https://github.com/vipulnaik/working-drafts/commit/a5db16a7e6fa0e85580fb18fdd6bc145a7998701
 
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~33 minutes: Download a bunch of CSVs of 2025 financial activity https://github.com/vipulnaik/personal-finances/commit/015f4f2acc211c7e059c4e0006ddddc6f55b68ab; later, process these https://github.com/vipulnaik/personal-finances/commit/2a86a2a117c7cbc483f32b5c279b1fb4ecc1ff3b 
+
+### US taxes
+
+- [x] ~20 minutes: Improve handling of SALT deduction cap in light of the value changing in 2025
+- [x] ~4 minutes: Add capital gains entry for a contractwork payment made in December 2025
+- [x] ~3 minutes: Check boxes for items completed through the year and financial activity downloaded
+- [x] ~25 minutes: Continue 2025 US tax work, following my tax steps though somewhat out of order
+
 ## Personal chores
 
 ### Cooking and food purchases
 
 - [x] (no separate time tracked as both prep and cleanup were multiplexed with listening to stuff): Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/2cffd459b3384bb28a98246e3be64a1b0ad8563b
 
+### Updates tracking and planning
+
+- [x] ~5 minutes: Add summaries for four days (1 minute overhead plus 4 day summaries at 1 minute each) https://github.com/vipulnaik/daily-updates/commit/e95489cedfac14170479e1ab0558e2ed0010c167
+
+### Administrative / travel / bureaucracy
+
+- [x] ~30 minutes: Work out a few administrative details https://github.com/vipulnaik/personal-finances/commit/79bf6db027a6bad3333ffe400c6866fd03817415
+- [x] ~4 minutes: Make a folder structure change (Google Drive)
+
 ## Other activities
+
+### Periodic conversations
+
+- [x] ~30 minutes: Weekly chat with mother (excluding administrative items)
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~10 minutes: Continue watching new content from the oncology playlist
+
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~30 minutes so far: Start listening to a video
+- [x] ~30 minutes: Start listening to a video
+
+### AI safety and implications
+
+- [x] ~1 hour 15 minutes: Listen to a video
 
 ### Other video/audio consumption of an educational nature
 
