Add summaries for period of 2026-01-26 to 2026-01-30; fetch latest personal issues

--- a/personal-issues/2199.md
+++ b/personal-issues/2199.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2026-01-27
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,10 +8,61 @@ projects:
 milestone:	
 number:	2199
 --
+## Personal chores
+
+### Cooking and food purchases
+
+- [x] (no separate time tracked as both prep and cleanup were multiplexed with listening to stuff): Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/2ed3847014ea180fdf2c3732b3653275c74cee08
+
+### Laundry
+
+- [x] (no separate time tracked as I multiplexed with listening to stuff) (NOT LTBC): Sort laundry clothes from yesterday
+
+### Health research, appointments, recording
+
+#### Health profile review and updates
+
+- [x] ~5 minutes: Finish long-overdue cross-checking of entered test result data in health profile
+
+#### Exercise routine
+
+- [x] ~23 minutes: Add a balance exercise and make other updates to balance exercise documentation https://github.com/vipulnaik/diet-exercise-health/commit/d1a63ddab1bbdb43a23c9efb338f294252c3b263 https://github.com/vipulnaik/diet-exercise-health/commit/a3133becb2c7b9255a07c8b57ced5e10af596d67 https://github.com/vipulnaik/diet-exercise-health/commit/6c8c6c2a474709ea993a46fa6e556db1472bb967 https://github.com/vipulnaik/diet-exercise-health/commit/22f9a0f3ba79cf800442ae0d296f37608f2b6ce3
+
+### Updates tracking and planning
+
+- [x] ~7 minutes: Add summaries for remainder of past week https://github.com/vipulnaik/daily-updates/commit/6df4f63a6d4dd1bf820da8608662fb430343d8f8 (1 minute overhead + 3 day summaries at 1 minute each + 3 minutes for week summary)
+
+### Personal practices
+
+- [x] ~5 minutes: Put together a personal practices document
+
 ## Other activities
+
+### LLM conversations
+
+- [x] ~5 minutes: Start a conversation with Claude
+
+### One-off conversations
+
+- [x] ~10 minutes: General asynchronous chats with work colleagues about issues tangentially inspired by work but not necessary for the execution of my work duties
+- [x] ~10 minutes: Read a link shared with me and reply with my thoughts
+
+### Facebook comments
+
+- [x] ~15 minutes: Post a few Facebook comments
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
+#### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
+
+- [x] ~10 minutes: Continue watching new content from the oncology playlist
+
 #### Health optimization space education: content not designed for concentrated education, eyes don't have to be on screen
 
-- [ ] ~15 minutes so far: Continue listening to a video
+- [x] ~1 hour 20 minutes: Finish listening to a video
+
+### Other video/audio consumption of an educational nature
+
+- [x] ~1 hour 20 minutes: Listen to a macroeconomics podcast video
+- [x] ~10 minutes: Listen to a segment of a discussion video about current politics
+- [x] ~25 minutes: Start listening to a video
