--- a/personal-issues/2207.md
+++ b/personal-issues/2207.md
@@ -1,5 +1,5 @@
 title:	Vipul Wednesday checklist | 2026-02-04
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,20 +8,52 @@ projects:
 milestone:	
 number:	2207
 --
+## Personal projects
+
+### Timelines wiki (contract work)
+
+- [x] ~30 minutes: Review a couple of timelines
+
+## Personal finances, income and taxes
+
+### Financial tracking and recording
+
+- [x] ~2 minutes: Wrap up recording of recent activity https://github.com/vipulnaik/personal-finances/commit/870b244787d41885dfffb5bfd1136a98bc9bb3e4
+
 ## Personal chores
+
+### Cooking and food purchases
+
+- [x] ~17 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/c7df79bb7cf9398b840b2f1a4a08e85348094697 excluding some part of cleanup time multiplexed with listening to a video
+
+### Laundry
+
+- [x] ~3 minutes (NOT LTBC): Wrap up laundry sorting from yesterday (excluding time multiplexed with listening to a video)
+
+### Updates tracking and planning
+
+- [x] ~13 minutes: Add weekend summaries, week summary, and month summary (1 minute overhead + 2 days at 1 minute each + notes for 1 day at 2 minutes + week notes at 4 minutes + month notes at 4 minutes)
 
 ### Personal devops
 
 - [x] ~7 minutes: Back up my browsing history; also, run checks for frequency of visits and log in to sites that I should be visiting regularly but didn't
 
+### Periodic cleaning tasks
+
+- [x] ~18 minutes: Sweep the bedroom (this took longer than usual because of a longer duration since the last sweep than usual)
+
 ## Other activities
+
+### Random stuff
+
+- [x] ~15 minutes: Dig into the Epstein files and collate some relevant stuff
 
 ### Health learning (general stuff that is not tied to immediate personal health action and doesn't involve active documentation work)
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [x] ~5 minutes: Continue watching new content from the oncology playlist
+- [x] ~10 minutes: Continue watching new content from the oncology playlist
 
 ### Other video/audio consumption of an educational nature
 
-- [ ] ~10 minutes so far: Start listening to a video
+- [x] ~45 minutes: Start listening to a video
