Add summaries for period of 2026-02-07 to 2026-02-08; add corresponding week summary; fetch latest personal issues

--- a/personal-issues/2211.md
+++ b/personal-issues/2211.md
@@ -1,5 +1,5 @@
 title:	Vipul Sunday checklist | 2026-02-08
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,13 +12,21 @@ number:	2211
 
 ### Cooking and food purchases
 
-- [x] ~3 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/09a2286f90248919a4213021a7d3f934ee46fb73 excluding most of prep time and all of cleanup time that was multiplexed with listening to stuff
+- [x] ~15 minutes: Rice prep https://github.com/vipulnaik/diet-exercise-health/commit/09a2286f90248919a4213021a7d3f934ee46fb73 excluding most of prep time that was multiplexed with listening to stuff (but including cleanup time that I did not multiplex with any accounted-for activity)
 
 ### Health research, appointments, recording
+
+#### Periodic tasks
+
+- [x] ~4 minutes: Do and document off-cycle floss pick pressure testing https://github.com/vipulnaik/diet-exercise-health/commit/b500c47453d36bf385b8be8df1f7b342fc0fbf9b https://github.com/vipulnaik/diet-exercise-health/commit/2f5ac7902e70bce6783a031fce3a05d305635566
 
 #### Unplanned incidents
 
 - [x] ~5 minutes: Record recent minor health issues
+
+### Updates tracking and planning
+
+- [x] ~7 minutes: Add weekday summaries (1 minute overhead + 5 days at 1 minute each + 1 minute for notes for a couple of days) https://github.com/vipulnaik/daily-updates/commit/172298be2a2c697cf8d4b08d67b9314f8f2666af
 
 ## Other activities
 
@@ -30,7 +38,7 @@ number:	2211
 
 #### Medical school curriculum education: Ninja Nerd videos (focused learning with eyes on screen for the most part)
 
-- [x] ~5 minutes: Continue watching new content from the oncology playlist
+- [x] ~10 minutes: Continue watching new content from the oncology playlist
 
 #### Topic-specific deep dives: dental / osteo stuff
 
